--- a/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/showdetails.cshtml
@@ -33,7 +33,7 @@
             </tr>
             <tr>
                 <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Status1.Gen_Name)</th>
-                <td style="color:@(Model.Gen_Status1.Gen_Name == "เปิดการรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => Model.Gen_Status1.Gen_Name)</td>
+                <td style="color:@(Model.Gen_Status1.Gen_Name == "เปิดรับสมัคร"?"forestgreen":"red")">@Html.DisplayFor(modelItem => Model.Gen_Status1.Gen_Name)</td>
             </tr>
             <tr>
                 <th style="text-align: center">@Html.DisplayNameFor(model => model.Gen_Fee)</th>
