--- a/CSManagement/CSManagement/Views/Logins/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Logins/Index.cshtml
@@ -29,9 +29,9 @@
                 {
                 <tr>
                     <td style="text-align:center">@(i++)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Log_ID)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Log_Pass)</td>
-                    <td>@Html.DisplayFor(modelItem => item.Log_Role)</td>
+                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Log_ID)</td>
+                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Log_Pass)</td>
+                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Log_Role)</td>
                 </tr>
                 }
             </tbody>
