--- a/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
+++ b/CSManagement/CSManagement/Views/Shared/_Sidebar.cshtml
@@ -52,7 +52,7 @@
                                 <a href="@Url.Action("Index", "Schools")"><i class="fa fa-user"></i> <span>จัดการโรงเรียนเดิมของนักศึกษา</span></a>
                             </li>
                             <li>
-                                <a href="@Url.Action("Index", "Logins")"><i class="fa fa-user"></i> <span>จัดการข้อมูลไอดี-พาสเวิร์ด</span></a>
+                                <a href="@Url.Action("Index", "Logins")"><i class="fa fa-user"></i> <span>ข้อมูลไอดี-พาสเวิร์ด</span></a>
                             </li>
                         </ul>
                     </li>
