--- a/CSManagement/CSManagement/Views/Courses/Details.cshtml
+++ b/CSManagement/CSManagement/Views/Courses/Details.cshtml
@@ -12,8 +12,11 @@
                     <h1 class="box-title">รายละเอียดข้อมูลหลักสูตร</h1>
 
                     <div style="float:right">
-                        <a class="btn btn-default" href="@Url.Action("Index", "Courses")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
-                        <a class="btn btn-danger" href="@Url.Action("Delete", "Courses")/@Model.Course_ID"><i class="fa  fa-trash-o"></i> ลบข้อมูล</a>
+                        <div class="delete-section">
+                            <a class="btn btn-default" href="@Url.Action("Index", "Courses")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+                            <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = @Model.Course_ID})">ลบข้อมูล</a>
+                            <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@Model.Course_ID">ยืนยันการลบ</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -57,3 +60,71 @@
         </div>
     </div>
 </section>
+
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+}
