--- a/CSManagement/CSManagement/Views/Generations/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Edit.cshtml
@@ -56,7 +56,7 @@
                 </div>
 
                 <div class="row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.Gen_Date, htmlAttributes: new { @class = "control-label" })
                         <div class="input-group">
                             <div class="input-group-addon">
@@ -66,10 +66,19 @@
                         </div>
                     </div>
 
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                         @Html.LabelFor(model => model.Gen_Location, htmlAttributes: new { @class = "control-label" })
                         @Html.EditorFor(model => model.Gen_Location, new { htmlAttributes = new { @class = "form-control" } })
                         @Html.ValidationMessageFor(model => model.Gen_Location, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="form-group col-md-4">
+                        @Html.LabelFor(model => model.Gen_Status, htmlAttributes: new { @class = "control-label" })
+                        <div class="input-group">
+                            <span class="input-group-addon"><i class="fa  fa-mortar-board"></i></span>
+                            @Html.DropDownList("Gen_Status", null, htmlAttributes: new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.Gen_Status, "", new { @class = "text-danger" })
+                        </div>
                     </div>
                 </div>
 
