--- a/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUser.cshtml
@@ -68,43 +68,70 @@
         </div>
 
         @*ประชาสัมพันธ์ข่าวสารของสาขา*@
-        <div class="col-lg-4 col-md-12 col-sm-12 ">
+        <div class="col-lg-4 col-md-12 col-sm-12">
             <div class="panel panel-default outer" style="width:95%">
                 <div class="panel-heading headerbar">
                     ข่าวประชาสัมพันธ์
                 </div>
-                <div class="panel-body text-justify">
-                    <ul class="nav nav-tabs">
-                        <li class="active"><a href="#">Home</a></li>
-                        <li><a href="#">Menu 1</a></li>
-                        <li><a href="#">Menu 2</a></li>
-                        <li><a href="#">Menu 3</a></li>
-                    </ul>
-                    <br>
-                    <p><strong>Note:</strong> This example shows how to create a basic navigation tab. It is not toggleable/dynamic yet (you can't click on the links to display different content)- see the last example in the Bootstrap Tabs and Pills Tutorial to find out how this can be done.</p>
-                </div>
+                @{
+                    if (ViewBag.NewsCount.Count > 0)
+                    {
+                        <ul class="nav nav-tabs" role="tablist">
+                            @{
+                                int k = 0;
+                                foreach (var item in ViewBag.NewsCount)
+                                {
+                                    if (k == 0)
+                                    {
+                                        <li class="nav-item">
+                                            <a class="nav-link active" data-toggle="tab" href="#@item.New_Name">@item.New_Name</a>
+                                        </li>
+                                    }
+                                    else
+                                    {
+                                        <li class="nav-item">
+                                            <a class="nav-link" data-toggle="tab" href="#@item.New_Name">@item.New_Name</a>
+                                        </li>
+                                    }
+                                    k++;
+                                }
+                            }
+                        </ul>
+                        <div class="tab-content">
+                            @foreach (var item in ViewBag.NewsCount)
+                            {
+                                <div class="container tab-pane" id="@item.New_Name">
+                                    <p>
+                                        @item.New_Details
+                                    </p>
+                                </div>
+                            }
+                            <div class="container tab-pane active">คลิกเพื่ออ่านข่าวสาร</div>
+                        </div>
+                    }
+                }
             </div>
         </div>
     </div>
 
 
-    <div class="container" >
+    <div class="container">
         <div class="card-body">
             <div class="row">
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                    <img src="~/img/logo1.png" class="card-img-top" />
+                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("IndexUser", "Students" )'"><img src="~/img/logo1.png" class="card-img-top"></a>
                 </div>
 
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                    <img src="~/img/logo2.png" class="card-img-top">
+                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("IndexUser", "Teachers" )'"><img src="~/img/logo2.png" class="card-img-top"></a>
                 </div>
 
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                    <img src="~/img/logo3.png" class="card-img-top">
+                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("IndexUser", "Generations" )'"><img src="~/img/logo3.png" class="card-img-top"></a>
                 </div>
 
                 <div class="col-12 col-lg-3 col-md-3 col-sm-6">
-                    <a href="http://register.kru.ac.th/reg/"><img src="~/img/logo4.png" class="card-img-top" /></a>
+                    <a style="cursor:pointer;" onclick="window.location.href = '@Url.Action("GoRegister", "Home" )'"><img src="~/img/logo4.png" class="card-img-top"/></a>
                 </div>
             </div>
         </div>
@@ -165,7 +192,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=@item.Pj_Video" data-target="#myModal">
+                                        <a class="btn_4 video-btn" alt="video" data-toggle="modal" data-src="https://www.facebook.com/plugins/video.php?href=https://web.facebook.com/kru.cs/videos/@item.Pj_Video/" data-target="#myModal">
                                             วิดีโอ
                                             <span class="pull-right badge bg-aqua">เข้าชม</span>
                                         </a>
@@ -205,41 +232,20 @@
             </header>
             <br />
             <div class="row">
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                    <div class="panel panel-default outer" style="width:90%">
-                        <div class="panel-heading headerbar">
-                            1.การเขียนแอพพลิเคชั่น
-                        </div>
-                        <div class="panel-body text-justify">
-                            <img src="~/img/images.jpg" style="width:80%;height:50%" />
-                            <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                    <div class="panel panel-default outer" style="width:90%">
-                        <div class="panel-heading headerbar">
-                            1.การเขียนแอพพลิเคชั่น
-                        </div>
-                        <div class="panel-body text-justify">
-                            <img src="~/img/images.jpg" style="width:80%;height:50%" />
-                            <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
+                @foreach (var item in ViewBag.SyllabusCount)
+                {
+                    <div class="col-lg-4 col-md-12 col-sm-12">
+                        <div class="panel panel-default outer" style="width: 90%">
+                            <div class="panel-heading headerbar">
+                                @item.Sy_Name
+                            </div>
+                            <div class="panel-body text-justify">
+                                <img src="~/img/@item.Sy_Img" style="width: 80%; height: 50%" />
+                                <p>@item.Sy_Details</p>
+                            </div>
                         </div>
                     </div>
-                </div>
-
-                <div class="col-lg-4 col-md-12 col-sm-12">
-                    <div class="panel panel-default outer" style="width:90%">
-                        <div class="panel-heading headerbar">
-                            1.การเขียนแอพพลิเคชั่น
-                        </div>
-                        <div class="panel-body text-justify">
-                            <img src="~/img/images.jpg" style="width:80%;height:50%" />
-                            <p>พัฒนาแอพพลิชั่นด้วยCross platform เช่น Xamarin, Ionic, React</p>
-                        </div>
-                    </div>
-                </div>
+                }
             </div>
         </div>
     </div>
