--- a/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
+++ b/CSManagement/CSManagement/Views/Home/IndexUserGrap.cshtml
@@ -69,64 +69,69 @@
 
 @using (Html.BeginForm("IndexUserGrap", "Home", FormMethod.Post))
 {
-<section class="content" style=" background-color: white;height:520px">
+    <section class="content" style=" background-color: white;height:520px">
 
-    <div class="row">
-        <div class="col-md-8">
-            <header class="header1">
-                <h1 class="page-title">ข้อมูลหลักสูตร</h1>
-            </header>
-        </div>
-        <div class="col-md-4">
-            <button type="submit" class="btn btn-success" style="float:right"><i class="fa fa-search"></i> ค้นหาตามปี</button>
-            <div class="col-md-3" style=" float: right;width:70%">
-                @Html.DropDownList("Year", null, "เลือกปี", htmlAttributes: new { @class = "form-control" })
-            </div>
-        </div>
-    </div>
-
-    <div class="primary">
         <div class="row">
-            @*///ตารางแสดงหลักสูตร///*@
             <div class="col-md-8">
-                <div class="panel panel-default outer">
-                    <div class="panel-body text-justify">
-                        <table id="example1" class="table table-bordered table-striped" style="width:100%">
-                            <thead>
-                                <tr>
-                                    <th style="text-align:center">ที่</th>
-                                    <th style="text-align:center">หมวดวิชา</th>
-                                    <th style="text-align:center">จำนวนหน่วยกิต</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                <tr>
-                                    <td style="text-align:center">@(i++)</td>
-                                    <td></td>
-                                    <td></td>
-                                </tr>
-                            </tbody>
-
-                        </table>
-                    </div>
+                <header class="header1">
+                    <h1 class="page-title">ข้อมูลหลักสูตร</h1>
+                </header>
+            </div>
+            <div class="col-md-4">
+                <button type="submit" class="btn btn-success" style="float:right"><i class="fa fa-search"></i> ค้นหาตามปี</button>
+                <div class="col-md-3" style=" float: right;width:70%">
+                    @Html.DropDownList("Year", null, "เลือกปี", htmlAttributes: new { @class = "form-control" })
                 </div>
             </div>
+        </div>
 
-            @*///กราฟแสดงหลักสูตร///*@
-            <div class="col-md-4" style="float:right;padding-right:40px">
-                <div class="panel panel-default outer">
-                    <div class="panel-heading headerbar">
-                        <label style="font-size:20px">สัดส่วนหมวดวิชาหลักสูตรสาขา</label>
+        <div class="primary">
+            <div class="row">
+                @*///ตารางแสดงหลักสูตร///*@
+                <div class="col-md-8">
+                    <div class="panel panel-default outer">
+                        <div class="panel-body text-justify">
+                            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                                <thead>
+                                    <tr>
+                                        <th style="text-align:center">ที่</th>
+                                        <th style="text-align:center">หมวดวิชา</th>
+                                        <th style="text-align:center">จำนวนหน่วยกิต</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    @if (ViewBag.coursesList != null)
+                                    {
+                                        foreach (var item in ViewBag.coursesList)
+                                        {
+                                            <tr>
+                                                <td style="text-align: center">@(i++)</td>
+                                                <td style="text-align: center">@item.Dep_Name</td>
+                                                <td style="text-align: center">@item.Dep_Credit</td>
+                                            </tr>
+                                        }
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
-                    <div class="panel-body text-justify chart-responsive">
-                        <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+                </div>
+
+                @*///กราฟแสดงหลักสูตร///*@
+                <div class="col-md-4" style="float:right;padding-right:40px">
+                    <div class="panel panel-default outer">
+                        <div class="panel-heading headerbar">
+                            <label style="font-size:20px">สัดส่วนหมวดวิชาหลักสูตรสาขา</label>
+                        </div>
+                        <div class="panel-body text-justify chart-responsive">
+                            <div class="chart" id="chartContainer" style="height: 300px; position: relative;"></div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
-</section>
+    </section>
 }
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
