--- a/CSManagement/CSManagement/Views/Projects/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Projects/Index.cshtml
@@ -42,13 +42,15 @@
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.Pj_TypePj)</td>
                             <td>@Html.ActionLink("ดูไฟล์งาน", "ShowPDF", new { id = item.Pj_ID }, new { target = "_blank" })</td>
                             <td>@Html.DisplayFor(modelItem => item.Pj_Date)</td>
-                            <td style="text-align:center">
-                                <a class="btn btn-info" href="@item.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a>
-                                @*<a class="btn btn-warning" href="@Url.Action("Edit", "Projects", new { id = item.Pj_ID })"><i class="fa fa-edit"></i>แก้ไข</a>*@
-                                @if (Session["AJ"] != null)
-                                {
-                                    <a class="btn btn-danger" href="@Url.Action("Delete", "Projects", new { id = item.Pj_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
-                                }
+                            <td style="text-align: center">
+                                <div class="delete-section">
+                                    <a class="btn btn-info" href="@item.Pj_Linkweb"><i class="fa fa-globe"></i> ดูเว็บไซต์</a>
+                                    @if (Session["AJ"] != null)
+                                    {
+                                        <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Pj_ID})">ลบข้อมูล</a>
+                                        <div class="btn btn-danger delete-confirm" style="display: none" data-delete-id="@item.Pj_ID">ยืนยันการลบ</div>
+                                    }
+                                </div>
                             </td>
                         </tr>
                     }
@@ -79,4 +81,67 @@
             });
         });
     </script>
+
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+
 }
