--- a/CSManagement/CSManagement/Views/Teachers/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Index.cshtml
@@ -2,7 +2,6 @@
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
-    int i = 1;
 }
 
 <section class="content">
@@ -19,10 +18,8 @@
             <table id="example1" class="table table-bordered table-striped" style="width:100%">
                 <thead>
                     <tr>
-                        <th style="text-align:center">ที่</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_ID)</th>
                         <th style="text-align:center">ชื่อ-นามสกุล</th>
-                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Export)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Position)</th>
                         <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Img)</th>
                         <th style="text-align:center">จัดการข้อมูล</th>
@@ -33,16 +30,17 @@
                     @foreach (var item in Model)
                     {
                         <tr>
-                            <td style="text-align:center">@(i++)</td>
                             <td style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_ID)</td>
                             <td>@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</td>
-                            <td>@Html.DisplayFor(modelItem => item.Tea_Export)</td>
                             <td>@Html.DisplayFor(modelItem => item.Tea_Position)</td>
                             <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@item.Tea_Img" height="70" width="70" alt="Alternate Text" /></td>
-                            <td class="text-center">
-                                <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
-                                <a class="btn btn-info" href="@Url.Action("Details", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                                <a class="btn btn-danger" href="@Url.Action("Delete", "Teachers", new { id = item.Tea_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                            <td style="text-align:center">
+                                <div class="delete-section">
+                                    <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                    <a class="btn btn-info" href="@Url.Action("Details", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                    <a class="btn btn-primary delete-link" href="@Url.Action("Delete", new {id = item.Tea_ID})">ลบข้อมูล</a>
+                                    <div class="btn btn-danger delete-confirm" style="display:none" data-delete-id="@item.Tea_ID">ยืนยันการลบ</div>
+                                </div>
                             </td>
                         </tr>
                     }
@@ -72,4 +70,67 @@
             });
         });
     </script>
+
+    <script type="text/javascript">
+    $(function () {
+        $("a.delete-link").click(function () {
+            var deleteLink = $(this);
+            deleteLink.hide();
+            var confirmButton = deleteLink.siblings(".delete-confirm");
+            confirmButton.show();
+
+            var cancelDelete =  function () {
+                removeEvents();
+                showDeleteLink();
+            };
+
+            var deleteItem = function () {
+                removeEvents();
+                confirmButton.hide();
+                $.post(
+                    '@Url.Action("Delete")',
+                    AddAntiForgeryToken({ id: confirmButton.attr('data-delete-id') }))
+                   .done(function () {
+                       var parentRow = deleteLink.parents("tr:first");
+                       parentRow.fadeOut('fast', function () {
+                           parentRow.remove();
+                       });
+                   }).fail(function (data) {
+                       alert("error");
+                   });
+                return false;
+            };
+
+            var removeEvents = function () {
+                confirmButton.off("click", deleteItem);
+                $(document).on("click", cancelDelete);
+                $(document).off("keypress", onKeyPress);
+            };
+
+            var showDeleteLink = function () {
+                confirmButton.hide();
+                deleteLink.show();
+            };
+
+            var onKeyPress = function (e) {
+                //Cancel if escape key pressed
+                if (e.which == 27) {
+                    cancelDelete();
+                }
+            };
+
+            confirmButton.on("click", deleteItem);
+            $(document).on("click", cancelDelete);
+            $(document).on("keypress", onKeyPress);
+
+            return false;
+        });
+
+        AddAntiForgeryToken = function (data) {
+            data.__RequestVerificationToken = $('input[name=__RequestVerificationToken]').val();
+            return data;
+        };
+    });
+    </script>
+
 }
