--- a/CSManagement/CSManagement/Views/Generations/Registers.cshtml
+++ b/CSManagement/CSManagement/Views/Generations/Registers.cshtml
@@ -82,7 +82,7 @@
                     <a class="btn btn-default col-md-3" style="float:left;font-size:18px" href="@Url.Action("IndexUser", "Generations")"><i class="fa fa-mail-reply"></i> ย้อนกลับ</a>
                     @if (ViewBag.genList != null)
                     {
-                        if (ViewBag.genList.Gen_Status1.Gen_Name.Equals("เปิดรับสมัคร"))
+                        if (ViewBag.genList.Gen_Status1.Gen_Name.Equals("เปิดการรับสมัคร"))
                         {
                             <button type="submit" class="btn btn-success col-md-3" style="float:right;font-size:18px"><i class="fa fa-plus"></i> สมัครอบรม</button>
                         }
